--- a/templates/result_pre.html
+++ b/templates/result_pre.html
@@ -23,6 +23,10 @@
                         <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_1_extend '">
                     {% elif topic == 3 %}
                         <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_3_extend '">
+                    {% elif topic == 4 %}
+                        <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_4_extend '">
+                    {% elif topic == 5 %}
+                        <input class="button-33" id= "next" style="background-color:	#00BB00;" value="Next Level" onclick="window.location.href='/topic_5_extend '">
                     {% endif %}
                 {% else %}
                 <div id = "final">
