--- a/templates/topic_2_e.html
+++ b/templates/topic_2_e.html
@@ -16,7 +16,7 @@
             </div>
 
             <div class="flex-child">
-                <h1>Prompt Production</h1>
+                <h1>Module Production</h1>
                 <div class ="c_input">
                     <fieldset>
                         <legend>輸入</legend>
@@ -71,7 +71,7 @@
                 <div class ="hint">
                     <fieldset>
                         <legend>關鍵提示</legend>
-                        <input type="text" id="hint" placeholder="如果....則輸出......">
+                        <input type="text" id="hint" placeholder="">
                     </fieldset>
                 </div>
                 <!-- <input class="button-33" id= "search" style="background-color:	#00BB00;" value="Search"> -->
