--- a/templates/topic_3_e.html
+++ b/templates/topic_3_e.html
@@ -16,11 +16,11 @@
             </div>
 
             <div class="flex-child">
-                <h1>Prompt Production</h1>
+                <h1>Module Production</h1>
                 <div class ="c_input">
                     <fieldset>
                         <legend>輸入</legend>
-                        <input type="text"id="input_define" name="prompti" placeholder="整數，單行輸入，代表數字" required>
+                        <input type="text"id="input_define" name="prompti" placeholder="" required>
                         <p>型別種類:(多)整數、字串、(二維)串列、浮點數、字典...</p>
                         <p>輸入格式:單行輸入、多行輸入</p>
                         <p>輸入意涵:代表月數、天數、第n項費伯數列...</p>
@@ -29,7 +29,7 @@
                 <div class ="c_output">
                     <fieldset>
                         <legend>輸出</legend>
-                        <input type="text" id="output_define" name="prompto" placeholder="印出指定整數結果" required>
+                        <input type="text" id="output_define" name="prompto" placeholder="" required>
                         <p>輸出結果:印出指定 整數/字串/串列 結果</p>
                     </fieldset>
                 </div>
@@ -264,6 +264,7 @@
                         Solution:solution,
                         Hint:hint,
             }
+            
             if (check_category(category) &&  check_keyword(keyword)){
                 $.ajax({
                     type:"POST",
