--- a/templates/try.html
+++ b/templates/try.html
@@ -8,7 +8,7 @@
         <div class="main">
             <div class="flex-child">
                 <div>
-                    <h1>Here's your prompt</h1>
+                    <h1>Here's your module</h1>
                     <div class="prompt">
                         <div><label for="name">新問題:<br>
                             <p id="n"></p>
